--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@trainline/react-skeletor": "^1.0.2",
     "bootstrap": "^4.1.3",
     "bootstrap-select": "^1.13.3",
     "firebase": "^5.5.9",
